# CppGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN_PLAN.md  RULES.md  vcpkg.json
docs/planning/: DESIGN_PLAN.md  RULES.md  iter1_instructions.md  iter2_instructions.md  iter3_instructions.md  iter4_instructions.md  iter5_instructions.md  iter6_instructions.md  iter7_instructions.md  supplement_instructions.md
include/: README.md  ResourceManager.hpp
include/Model/: GameModel.hpp  IModel.hpp
include/View/: GameView.hpp  IView.hpp
include/ViewModel/: GameViewModel.hpp  IViewModel.hpp
include/app/: AppAgent.hpp
include/common/: Actor.hpp  AirMap.hpp  Constants.hpp  Geometry.hpp  MathUtils.hpp  PropertyIds.hpp  Types.hpp
include/logic/: CollisionSystem.hpp  GameModel.hpp  GameViewModel.hpp  ScoreManager.hpp
include/resource/: AssetManager.hpp  Logger.hpp  SaveManager.hpp
include/view/: AircraftSelectScreen.hpp  BossHealthBar.hpp  BulletItem.hpp  EnemyItem.hpp  GameOverScreen.hpp  GameScene.hpp  GameView.hpp  HudOverlay.hpp  LevelCompleteScreen.hpp  LevelSelectScreen.hpp  ModeSelectScreen.hpp  PauseOverlay.hpp  PlayerItem.hpp  SplashScreen.hpp  StarFieldItem.hpp  StartScreen.hpp  UpgradeScreen.hpp  ViewConstants.hpp
include/viewmodel/: AircraftStats.hpp  Boss.hpp  Bullet.hpp  CollisionSystem.hpp  Enemy.hpp  GameConstants.hpp  GameMapVM.hpp  Player.hpp  PowerUpManager.hpp  ScoreManager.hpp  SkillSystem.hpp  SpiritVM.hpp  UpgradeManager.hpp  WaveManager.hpp
qml/: main.qml
resources/: resource.h  resources.qrc  resources.rc
src/: ResourceManager.cpp  main.cpp
src/Model/: GameModel.cpp
src/View/: GameView.cpp
src/ViewModel/: GameViewModel.cpp
src/app/: AppAgent.cpp  main.cpp
src/common/: AirMap.cpp  Geometry.cpp  Logger.cpp  MathUtils.cpp
src/logic/: Bullet.cpp  CollisionSystem.cpp  Enemy.cpp  GameModel.cpp  GameViewModel.cpp  Player.cpp  ScoreManager.cpp
src/resource/: AssetManager.cpp  Logger.cpp  SaveManager.cpp
src/view/: AircraftSelectScreen.cpp  BossHealthBar.cpp  BulletItem.cpp  BulletShape.qml  EnemyItem.cpp  EnemyPlane.qml  GameCanvas.qml  GameOverScreen.cpp  GameOverScreen.qml  GameScene.cpp  GameView.cpp  HUD.qml  HudOverlay.cpp  LevelCompleteScreen.cpp  LevelSelectScreen.cpp  ModeSelectScreen.cpp  PauseOverlay.cpp  PlayerItem.cpp  PlayerPlane.qml  SplashScreen.cpp  StarField.qml  StarFieldItem.cpp  StartScreen.cpp  StartScreen.qml  UpgradeScreen.cpp  main.qml
src/viewmodel/: AircraftStats.cpp  Boss.cpp  Bullet.cpp  CollisionSystem.cpp  Enemy.cpp  GameMapVM.cpp  Geometry.cpp  MathUtils.cpp  Player.cpp  PowerUpManager.cpp  ScoreManager.cpp  SkillSystem.cpp  SpiritVM.cpp  UpgradeManager.cpp  WaveManager.cpp
tests/: test_aircraft_stats.cpp  test_auto_play.cpp  test_boss.cpp  test_collision.cpp  test_game_map_vm.cpp  test_game_model.cpp  test_main.cpp  test_player.cpp  test_power_up.cpp  test_skill_system.cpp  test_upgrade_manager.cpp  test_wave_manager.cpp
